--- a/index.html
+++ b/index.html
@@ -5,98 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
     <title>GBA SP</title>
 </head>
 <body>
 
-  <button class="angle" value="1.57">
-    <img src="assets/angle0.png">
-  </button>
-  <button class="angle" value="0">
-    <img src="assets/angle90.png">
-  </button>
-  <button class="angle" value="-1.57">
-    <img src="assets/angle180.png">
-  </button>
-
-  <input type="color" id="color-select" value="#FFFFFF" style="position: absolute;">
-
-  <select id="part-select" style="position: absolute; left: 400px;">
-
-    <option value="Background">Background</option>
-
-    <option disabled></option>
-    <option selected value="Main">---Main---</option>
-    <option value="Base Top">Base Top</option>
-    <option value="Base Bottom">Base Bottom</option>
-    <option value="Screen Top">Screen Top</option>
-    <option value="Screen Bottom">Screen Bottom</option>
-
-    <option disabled></option>
-    <option value="Buttons">---Buttons---</option>
-    <option value="Button Dpad">D-Pad</option>
-    <option value="Button A">A Button</option>
-    <option value="Button B">B Button</option>
-    <option value="Button L">L Button</option>
-    <option value="Button R">R Button</option>
-    <option value="Button Select">Select Button</option>
-    <option value="Button Start">Start Button</option>
-    <option value="Button Light">Light Button</option>
-    <option value="Power Switch">Power Switch</option>
-    <option value="Volume Slider">Volume Slider</option>
-
-    <option disabled></option>
-    <option value="Text">---Text---</option>
-    <option value="Button A Text">Button A Text</option>
-    <option value="Button B Text">Button B Text</option>
-    <option value="Button L Text">Button L Text</option>
-    <option value="Button R Text">Button R Text</option>
-    <option value="Button Light Symbol">Button Light Symbol</option>
-    <option value="Start Select Text">Start/Select Text</option>
-
-    <option disabled></option>
-    <option value="Other">---Other---</option>
-    <option value="Hinge">Hinges</option>
-    <option value="Screen Accents">Accents</option>
-    <option value="Power Link Ports">Power/Link Ports</option>
-  </select>
-
-  <input id="brightness" type="range" min="0" max="1" value="0.7" step="0.1">
-
-  <!-- <main id="menu">
-    <h3>Angle</h3>
-    <h3>Presets</h3>
-    <h3>Background</h3>
-    <h3>Brightness</h3>
-    <h3>Custom</h3>
-    <h4>Main</h4>
-    <section>
-      <div>Base Top</div>
-      <input type="color" id="base-color" value="#E66465">
-    </section>
-    <section>Base Bottom</section>
-    <section>Screen Top</section>
-    <section>Screen Bottom</section>
-    <h4>Buttons</h4>
-    <h4>Text</h4>
-    <h4>Other</h4>
-  </main> -->
-
+  <div id="angle-container">
+    <button class="angle" value="1.57">
+      <img src="assets/angle0.png">
+    </button>
+    <button class="angle" value="0">
+      <img src="assets/angle90.png">
+    </button>
+    <button class="angle" value="-1.57">
+      <img src="assets/angle180.png">
+    </button>
+  </div>
 
   <div id="loader-container">
     <span class="loader"></span>
   </div>
 
-  <!-- Polyfill for some browsers not supporting import maps -->
+  <!-- Polyfill for browsers not supporting import maps -->
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   <script type="importmap">
       {
         "imports": {
           "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
           "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/",
-          "tween": "https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.esm.js"
+          "tween": "https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.esm.js",
+          "dat.gui": "https://unpkg.com/dat.gui@0.7.9/build/dat.gui.module.js"
         }
       }
     </script>
