updated relative path

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
   <div id="angle-container">
     <button class="angle" value="1.57">
-      <img src="assets/angle0.png">
+      <img src="../gba-sp/assets/angle0.png">
     </button>
     <button class="angle" value="0">
-      <img src="assets/angle90.png">
+      <img src="../gba-sp/assets/angle90.png">
     </button>
     <button class="angle" value="-1.57">
-      <img src="assets/angle180.png">
+      <img src="../gba-sp/assets/angle180.png">
     </button>
   </div>
 
